# netyapper

./: .env.example  Dockerfile  Makefile  README.md  actions.yaml  docker-compose.dev.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  enhancement_request2.md
api/: main.py
app/: main.py
cli/: query.py
core/: llm_client.py  print_example_prompt.py  prompt.py  registry.py
docs/architecture/: llm_dispatcher_implementation_plan.md  llm_intent_dispatcher_design_spec.md  project_plan.md  system_architecture.md  system_spec.md
docs/developer/: README.md  user.md
docs/developer_logs/alpha-1b/: 2025-05-12.md
mcp_clients/: netbox_mcp_client.py
schemas/: netbox.py
scripts/: check_ollama.sh
tests/: test_prompt.py  test_registry.py
