[project]
name = "netyapper"
version = "0.1.0"
description = "Baseline FastAPI project with CLI and containers."
authors = [
    { name = "ccieblogger", email = "ccieblogger@example.com" }
]
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
pydantic = "^2.7.1"
httpx = "^0.27.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
